updated root colors, fixed spacing, created styling for product section, added media queries for header and product section

--- a/style.css
+++ b/style.css
@@ -1,23 +1,20 @@
 /*font*/
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap');
 
 
  /*colors*/
  :root {
-     /*(hero and footer)*/
-     --dark: #1F2937;
+     /*(hero, footer, text)*/
+     --dark: #000000;
      
      /*Main Text*/ 
-     --main: #F9FAF8;
- 
-     /*Secondary Text and links*/
-     --secondary  : #E5E7EB;
+     --main: #ffffff;
  
      /*Logo Text*/
-     --header : #F9FAF8;
+     --logo : #F9FAF8;
  
      /*Button color*/
-     --action : #ab864a;
+     --action : #d10a00;
  
      /*Information Header Text*/
      --info : #1F2937;
@@ -25,10 +22,9 @@
      /*Quote Section*/
      --quote : #7081b9;
  
-     /*Quote Text*/
-     --mild :#1F2937;
+     /*Shapes*/
+     --shape :#FDF7FA;
    }
-
 
 *{
     box-sizing: border-box;
@@ -36,16 +32,13 @@
     padding: 0px
 }
  
- 
 body{
     font-family: 'Poppins'; 
 }
 
-
 h1, h2{
     margin-bottom: 15px;
 }
-
 
 ul{
     list-style-type: none;
@@ -60,7 +53,6 @@ ul{
     border-bottom: 1px solid rgb(229, 231, 235, .20);
 }
 
-
 .navbar .container{
     display: flex;
     justify-content: space-around;
@@ -68,19 +60,17 @@ ul{
     height: 100%;
 }
  
-
 .navbar .logo{
     color: var(--logo);
     font-size: 28px;
-    font-weight: 600;
+    font-weight: 400;
 }
-
    
 .navbar ul{
     display: flex;
-    gap: 20px
+    gap: 20px;
+    font-weight: 100;
 }
- 
  
 .navbar a{
     color: var(--main);
@@ -102,52 +92,48 @@ ul{
     align-items: center;
     justify-content: space-around;
     margin: 0px auto;
-    padding: 50px 30px;    
+    padding: 30px 75px 0px 75px;    
 }
   
-   
 .header .wrapper{
    padding-left: 10px;
     max-width:480px ;
 }
    
-
 .header img{ 
     max-width:  700px;
     padding-top: 50px;
      
 }
- 
 
-.header .announcement{
-    margin-bottom:25px;
+.header .announcement {
+    opacity: 35%;
 }
-
 
 .header h1{
     color: var(--main);
-    font-weight: 500;
+    font-weight: 200;
     font-size: 64px;
     line-height: 1;
 }
  
  
 .header p{
-    color: var(--secondary);
+    color: var(--main);
     margin: 0px 0px;
     font-size: 16px;
+    font-weight: 100;
 }
- 
 
 .header button{
     background: var(--action);
     color: white;
+    border-radius: 15px;
     border: 0;
     margin-top: 20px;
-    padding: 15px 20px;
-    padding: 15px 20px;
+    padding: 12px 35px;
 }
-   
+
 
 /*Curve between header and products*/
 .wave {
@@ -160,7 +146,6 @@ ul{
     transform: rotate(180deg);
 }
 
-
 .wave svg {
     position: relative;
     display: block;
@@ -168,10 +153,90 @@ ul{
     height: 100px;
 }
 
-
 .wave .shape-fill {
     fill: var(--dark);
 }  
+
+
+/*Product Section*/
+.products{
+    background-color: #E6E6E6;
+    padding-top: 150px;
+    justify-content: center;
+    align-items: center;
+}
+
+.products_title{
+    text-align: center;
+    padding-bottom: 40px;
+    font-size: 30px;
+    color: var(--main);
+}
+
+.products .container{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+.card{
+    flex-direction: column;
+    text-align: center;
+    overflow: hidden;
+    width: 350px;
+    margin: 40px 20px 90px 20px;
+    border-radius: 15px;
+    background: white;
+    color: var(--dark);
+    box-shadow: 0 4px 40px rgba(0, 0, 0, 0.2);
+}
+
+
+.card .imgbox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 250px;
+    margin-bottom: 15px;
+}
+
+.card .imgbox img{
+    width: 80%; 
+}
+
+.card .content{
+    display: flex;
+    flex: flex-start;
+    align-items: flex-start;
+    margin-top: 30px;
+}
+
+.content, .card h1 h2{
+    justify-content: center;
+}
+
+.card h1{
+    font-weight: 700;
+    font-size: 22px;
+}
+
+.card h2{
+    font-weight: 400;
+    font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -203,5 +268,17 @@ ul{
     text-align: center;
     justify-content: center;
     margin: 0 auto;     
+    }
+}
+
+
+@media(max-width: 720px){
+.products .container{
+    flex-direction: column;
+    padding-top: 20px;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+
     }
 }
